tests/functional/data/transpiler/common/errors/outer_too_much_arguments.err
outer_too_much_arguments.cpp:2:34: error: [@outer] takes at most one index
    2 |     for (int i = 0; i < 10; ++i; @outer(1, 2, 3)) {
      |                                  ^
